Bug 1896172 - Correctly set tab priority after moving to new window r=nika

Differential Revision: https://phabricator.services.mozilla.com/D217865